passes more extra tests